--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "unocssdemo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "webpack serve --config ./webpack.config.js",
+    "build": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,6 +15,9 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.17",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
     "@types/chrome": "0.0.237",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.6",
@@ -25,9 +25,20 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-router": "^5.1.20",
     "@types/redux": "^3.6.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@unocss/webpack": "^0.55.7",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.4.4",
     "typescript": "^5.0.2",
     "unocss": "^0.52.4",
-    "vite": "^4.3.2"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
