--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,8 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "host_permissions": ["<all_urls>"]
+  "host_permissions": ["<all_urls>"],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+  }
 }
