--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,12 @@
 
     /* Bundler mode */
     "moduleResolution": "node",
+    "esModuleInterop": true,
     // "allowImportingTsExtensions": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx",
 
     /* Linting */
@@ -23,6 +24,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "vite_plugin"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"],
+  "exclude": ["node_modules", "vite_plugin"]
 }
